--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,6 +15,10 @@
         <div class="col-md-12">
             navbar here
         </div>
+
+        <div class="col-md-12">
+         banner img here
+        </div>
     </div>
 </div>
 
