--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../STYLING/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <title>ABIR'S WEBSITE</title>
 </head>
 <body>
@@ -23,7 +25,8 @@
 </div>
 
 <script src="../JAVASCRIPT/index.js"></script>    
-<script src="../js/jquery-3.6.0.min.js"></script>
+<script src="../bootstrap-5.2.2-dist/js/bootstrap.js"></script>
 <script src="../js/bootstrap.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
